[package]
name = "homad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.9.0-alpha.2"
serde_json = "1.0.128"
socket2 = "0.5.7"
pnet = "0.35.0"
serde_repr = "0.1.19"
sscanf = "=0.3.1"
derive_builder = "0.20.2"
nix = { version = "0.29.0", features = ["socket"] }
tokio = { version = "1.43.0", features = [
    "default",
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
] }
libc = "0.2.169"
priority-queue = "2.1.1"
async-priority-channel = "0.2.0"
num = "0.4.3"
